--- a/package.json
+++ b/package.json
@@ -1,37 +1,83 @@
 {
-  "homepage": "http://limabeth.github.io/Retro-Snake",
-  "name": "retro-snake",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp",
-    "build": "gulp build && gulp rollup",
-    "deploy": "gh-pages -d dist"
-  },
-  "author": "Uknown",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@glidejs/glide": "^3.5.2",
-    "browser-sync": "^2.26.13",
-    "del": "^6.0.0",
-    "gh-pages": "^3.2.3",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-better-rollup": "^4.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.5.1",
-    "rollup": "^2.66.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "swiper": "^8.0.0"
-  }
+	"homepage": "https://sophrona.github.io/V-Snake",
+	"name": "fls-start",
+	"version": "3.0.0",
+	"description": "Start template with Gulp and Webpack",
+	"author": "FLS",
+	"private": true,
+	"license": "",
+	"type": "module",
+	"scripts": {
+		"dev": "gulp && webpack serve --progress -c config/webpack.dev.js",
+		"build": "gulp build --build",
+		"sprite": "gulp sprite",
+		"fonts": "gulp fonts --rewrite",
+		"deploy": "gulp deployFTP --build",
+		"deploygh": "gulp deployGH",
+		"zip": "gulp deployZIP --build",
+		"devbuild": "gulp build --build --nowebp",
+		"tmp": "gulp -f gulpfile.tmp.js",
+		"bem": "fls-bemtree-from-html"
+	},
+	"devDependencies": {
+		"copy-webpack-plugin": "latest",
+		"css-loader": "latest",
+		"del": "latest",
+		"file-include-webpack-plugin-replace": "latest",
+		"fls-bemtree-from-html": "^1.0.0",
+		"gulp": "latest",
+		"gulp-autoprefixer": "latest",
+		"gulp-clean-css": "latest",
+		"gulp-fonter-fix": "latest",
+		"gulp-gh-pages": "^0.5.4",
+		"gulp-group-css-media-queries": "latest",
+		"gulp-if": "latest",
+		"gulp-imagemin": "latest",
+		"gulp-newer": "latest",
+		"gulp-notify": "latest",
+		"gulp-plumber": "latest",
+		"gulp-prettier": "latest",
+		"gulp-rename": "latest",
+		"gulp-svg-sprite": "latest",
+		"gulp-ttf2woff": "latest",
+		"gulp-ttf2woff2": "latest",
+		"gulp-util": "latest",
+		"gulp-version-number": "latest",
+		"gulp-webp": "latest",
+		"gulp-webp-html-nosvg": "latest",
+		"gulp-webpcss": "latest",
+		"gulp-zip": "latest",
+		"html-webpack-plugin": "latest",
+		"inputmask": "latest",
+		"js-datepicker": "^5.18.0",
+		"less": "^4.1.2",
+		"less-loader": "^10.2.0",
+		"lightgallery": "latest",
+		"load-plugins": "latest",
+		"mini-css-extract-plugin": "2.4.7",
+		"nouislider": "^15.5.1",
+		"pug": "latest",
+		"pug-loader": "latest",
+		"sass": "latest",
+		"sass-loader": "latest",
+		"scroll-js": "^3.5.0",
+		"smooth-scroll": "latest",
+		"string-replace-loader": "latest",
+		"style-loader": "latest",
+		"swiper": "latest",
+		"terser-webpack-plugin": "latest",
+		"tippy.js": "latest",
+		"transform-runtime": "0.0.0",
+		"vanilla-lazyload": "latest",
+		"vanillajs-datepicker": "^1.2.0",
+		"vinyl-ftp": "latest",
+		"webp-converter": "2.2.3",
+		"webpack": "latest",
+		"webpack-cli": "latest",
+		"webpack-dev-server": "latest",
+		"webpack-stream": "latest"
+	},
+	"dependencies": {
+		"simplebar": "latest"
+	}
 }
