update gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://sophrona.github.io/V-Snake",
+	"homepage": "https://vizereth.github.io/vanilla-js-snake",
 	"name": "fls-start",
 	"version": "3.0.0",
 	"description": "Start template with Gulp and Webpack",
@@ -78,6 +78,7 @@
 		"webpack-stream": "latest"
 	},
 	"dependencies": {
+		"gh-pages": "^6.3.0",
 		"simplebar": "latest"
 	}
 }
